--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap&text=reposapd" rel="stylesheet">
 </head>
-<body>
+<body class="{{ 'home' if page.url == '/' else 'stats' }}">
   {{ content | safe }}
 </body>
 </html>
