--- a/src/index.njk
+++ b/src/index.njk
@@ -6,3 +6,11 @@ layout: base
   <h1>repos wrapped</h1>
   <p>A yearly review of your public GitHub repository stats</p>
 </header>
+<main class="container">
+  <h2>View your stats</h2>
+  <p><small>Endpoints require trailing slashes</small></p>
+  <ol>
+    <li>Append your GitHub username to the url, ex: <code>reposwrapped.dev/username/</code></li>
+    <li>Optionally choose a different year, ex. <code>reposwrapped.dev/username/year/</code></li>
+  </ol>
+</main>
