Resolve path handling

--- a/src/stats.njk
+++ b/src/stats.njk
@@ -1,7 +1,7 @@
 ---
 layout: base
 permalink:
-  stats: /:user/:year?/
+  stats: /stats/:user/:year?/
 ---
 
 {%- set user = eleventy.serverless.path.user -%}
