--- a/src/index.njk
+++ b/src/index.njk
@@ -10,7 +10,7 @@ layout: base
   <h2>View your stats</h2>
   <p><small>Endpoints require trailing slashes</small></p>
   <ol>
-    <li>Append your GitHub username to the url, ex: <code>reposwrapped.dev/username/</code></li>
-    <li>Optionally choose a different year, ex. <code>reposwrapped.dev/username/year/</code></li>
+    <li>Append your GitHub username to the url, ex: <code>/stats/username/</code></li>
+    <li>Optionally choose a different year, ex. <code>/stats/username/year/</code></li>
   </ol>
 </main>
