OG stats images

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,6 +1,8 @@
 {%- set pageTitle %}{% if title and page.url != '/' %}{{ title }} | {% endif %}{{ meta.siteName }}{% endset -%}
 {%- set pageDescription %}{% if description %}{{ description }}{% else %}{{ meta.description }}{% endif %}{% endset -%}
-{%- set pageSocialImg %}{{ meta.url }}/img/reposwrapped.png{% endset -%}
+{%- set homeSocialImg %}{{ meta.url }}/img/reposwrapped.png{% endset -%}
+{%- set statsSocialImg -%}{{ meta.url }}/social-img/{{ user }}/{{ year }}/{{ total }}/{{ stars }}{% endset -%}
+{%- set pageSocialImg = homeSocialImg if page.url == '/' else statsSocialImg -%}
 
 <!DOCTYPE html>
 <html lang="en">
