--- a/src/social-template.njk
+++ b/src/social-template.njk
@@ -20,7 +20,7 @@ eleventyExcludeFromCollections: true
           </div>
           <div class="card">
             <dt>Most starred</dt>
-            <dd class="starred">⭐️ 488<br>smolcss</dd>
+            <dd><span>⭐️ 488</span><span>smolcss</span></dd>
           </div>
         </dl>
         <p>reposwrapped.dev</p>
