--- a/src/social-template.njk
+++ b/src/social-template.njk
@@ -20,7 +20,7 @@ eleventyExcludeFromCollections: true
           </div>
           <div class="card">
             <dt>Most starred</dt>
-            <dd><span>⭐️ 488</span><span>smolcss</span></dd>
+            <dd>⭐️ <span class="stars">488</span><br><em class="starsrepo">smolcss</em></dd>
           </div>
         </dl>
         <p>reposwrapped.dev</p>
