Make slashes optional

--- a/src/404.njk
+++ b/src/404.njk
@@ -5,7 +5,7 @@ layout: base
 
 <header class="container">
   <h1>Oops!</h1>
-  <p>Make sure you included trailing slashes!</p>
+  <p>Check the instructions and try again.</p>
 </header>
 <main class="container">
   <h2>View your stats</h2>
