Resolve for no public repos

--- a/src/social-template.njk
+++ b/src/social-template.njk
@@ -18,7 +18,7 @@ eleventyExcludeFromCollections: true
             <dt>Total repos</dt>
             <dd class="total">17</dd>
           </div>
-          <div class="card">
+          <div class="card starred">
             <dt>Most starred</dt>
             <dd><span class="stars">488</span><br><em class="starsrepo">smolcss</em></dd>
           </div>
