--- a/src/stats.njk
+++ b/src/stats.njk
@@ -63,6 +63,6 @@ eleventyComputed:
   {% endfor %}
   </ol>
 {% else %}
-<p>Sorry, we've either hit the API limit for now or you do not have any public repos for {{ year }}.</p>
+<p>Sorry, we've either hit the API limit for now or you do not have any public repos that were created within {{ year }}.</p>
 {% endif %}
 </main>
